--- a/package.json
+++ b/package.json
@@ -22,18 +22,15 @@
   ],
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "eslint": "^7.29.0",
-    "eslint-config-openlayers": "^15.1.0",
-    "mocha": "^9.0.1"
+    "eslint": "^7.32.0",
+    "eslint-config-openlayers": "^16.0.1",
+    "mocha": "^9.1.2"
   },
   "eslintConfig": {
-    "extends": "openlayers",
-    "parserOptions": {
-      "ecmaVersion": 2017
-    }
+    "extends": "openlayers"
   },
   "dependencies": {
-    "commander": "^7.2.0",
+    "commander": "^8.2.0",
     "degit": "^2.8.4",
     "fs-extra": "^10.0.0",
     "validate-npm-package-name": "^3.0.0"
